# project-m1

./: .config_hotkeys  .config_save  .gitignore  Cargo.toml  README.md  build.rs  main.rs
display_resolution_detection/: Cargo.toml  display_resolution.c
display_resolution_detection/src/: main.rs
file_dialog/: Cargo.toml
file_dialog/src/: main.rs
file_dialog/src/image_coding/: mod.rs
global_key_activation/: Cargo.toml
global_key_activation/src/: main.rs
gui/: file_dialog.rs  main_window.rs  mod.rs  rect_selection.rs
itc/: mod.rs
main_window/: Cargo.toml
main_window/src/: main.rs
output_format/: Cargo.toml  main.rs  mod.rs
rect_selection/: Cargo.toml  main.rs
rect_selection_revisited/: Cargo.toml
rect_selection_revisited/src/: main.rs
src/: main.rs
src/edit_image_utils/: mod.rs
src/gui/: capture_mode.rs  edit_image.rs  error_alert.rs  file_dialog.rs  hotkeys_settings.rs  loading.rs  main_window.rs  menu.rs  mod.rs  rect_selection.rs  save_settings.rs
src/gui/edit_image/: edit_image_utils.rs  mod.rs  utils.rs
src/head_thread/: mod.rs
src/hotkeys/: mod.rs
src/image_coding/: mod.rs
src/itc/: mod.rs
src/screens_manager/: mod.rs
src/screenshot/: mod.rs
