[package]
name = "output_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
env_logger = "0.10"
features = "0.10.0"
image = "0.24.6"
screenshots = "0.7.0"
clipboard = "0.5.0"
arboard = "3.2.0"
gif = "0.12.0"
serde = "1.0.185"
serde_json = "1.0.105"

[[bin]]
name = "output_format"
path = "main.rs"
