[package]
name = "project-m1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
eframe = "0.22.0"
image = "0.24.7"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
screenshots = "0.8.2"
clipboard = "0.5.0"
rfd = "0.11.4"
imageproc = "0.23.0"
